grammars/tree-sitter-cobol/grammar.js
    start: $ => choice(
      repeat($.program_definition),
      $.copybook_definition,
      //optional($.function_definition) //todo
    ),

    copybook_definition: $ => choice(
      $.copybook_data_definition,
      $.copybook_wrapped_procedure_definition,
      $.copybook_procedure_definition,
    ),

    copybook_data_definition: $ => prec.right(repeat1(choice(
      $._copybook_data_entry,
      $.file_description,
      $.select_statement,
    ))),

    copybook_procedure_definition: $ => prec.right(seq(
      $._copybook_procedure_statement,
      repeat(choice(
        $._copybook_procedure_statement,
        alias($._copybook_paragraph_header, $.paragraph_header),
      ))
    )),

    _copybook_data_entry: $ => prec.right(choice(
      seq($.copy_statement, repeat1($._data_period)),
      prec(2, seq(alias($._condition_name_entry, $.data_description), repeat1($._data_period))),
      seq($.data_description, repeat1($.copy_statement), repeat1($._data_period)),
      seq($.data_description, repeat1($._data_period)),
      seq(alias($._exec_sql_include_statement, $.exec_sql_statement), optional(seq($._data_period, optional($._data_period)))),
    )),

    _copybook_procedure_statement: $ => seq(
      choice(
        $.accept_statement,
        $.exit_statement,
        $.goto_statement,
        $.move_statement,
      ),
      $._end_statement
    ),

    _copybook_paragraph_header: $ => seq(
      field('name', $._WORD),
      '.'
    ),

    program_definition: $ => prec.right(4, seq(
      $.identification_division,
      repeat($._inter_division_copy_statement),
      optional($.environment_division),
      repeat($._inter_division_copy_statement),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    _inter_division_copy_statement: $ => seq(
      $.copy_statement,
      $._data_period
    ),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(choice(
        $._program_id_paragraph,
        $._program_id_paragraph_without_period
      )),
      repeat($._identification_metadata_section)
    ),

    _program_id_paragraph: $ => seq(
      $._PROGRAM_ID, '.',
      $.program_name,
      optional(choice(
        $.as_literal,
        $.is_initial,
        $.is_common)),
      '.'
    ),

    _program_id_paragraph_without_period: $ => seq(
      $._PROGRAM_ID, '.',
      $.program_name,
      optional(choice(
        $.as_literal,
        $.is_initial,
        $.is_common))
    ),

    _identification_metadata_section: $ => choice(
      $.author_section,
      $.installation_section,
      $.date_written_section,
      $.date_compiled_section,
      $.security_section
    ),

    program_name: $ => choice(
      $.cobol400_word,
      $._WORD,
      $._LITERAL
    ),

    data_division: $ => prec.right(seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.database_section),
      choice(
        seq(
          optional($.working_storage_section),
          optional($.local_storage_section),
          optional($.linkage_section),
          optional($.report_section),
          optional($.screen_section),
        ),
        seq(
          $.linkage_section,
          $.working_storage_section,
          optional($.local_storage_section),
          optional($.report_section),
          optional($.screen_section),
        )
      ),
    )),

    working_storage_section: $ => prec.right(seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat($._data_division_entry)
    )),

    _data_division_entry: $ => prec.right(choice(
      seq($.copy_statement, repeat1($._data_period)),
      seq($.level_copy_statement, repeat1($._data_period)),
      prec(2, seq(alias($._condition_name_entry, $.data_description), repeat1($._data_period))),
      seq($.data_description, repeat1($.copy_statement), repeat1($._data_period)),
      seq($.data_description, repeat1($._data_period)),
      $.data_description_without_period,
      seq(alias($._exec_sql_include_statement, $.exec_sql_statement), optional(seq($._data_period, optional($._data_period)))),
      seq($.exec_sql_statement, optional($._data_period))
    )),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      /*seq(
        $.level_number_88, $.entry_name
      ),*/
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $.cobol400_word,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.burroughs_lower_bounds_clause,
      $.real_usage_clause,
      $.indicator_clause,
      $.error
    ),

    _identifier: $ => prec.right(choice(
      $.qualified_word,
      seq($.qualified_word, $.subref),
      seq($.qualified_word, $.refmod),
      seq($.qualified_word, $.subref, $.refmod),
    )),

    qualified_word: $ => sepBy(
      choice($.cobol400_word, $.WORD), $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF,
      $._ZERO_OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string,
      optional($.date_format_clause)
    ),

    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_x: $ => choice(
      $._fixed_format_picture_x,
      /([xX](\([0-9]+\))?)+/
    ),

    picture_9: $ => choice(
      $._fixed_format_picture_9,
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
    ),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    value_clause: $ => prec.right(seq(
      choice($._VALUE, $._VALUES),
      optional(choice($._IS, $._ARE)),
      repeat1($.value_item),
      optional($._WHEN),
      optional($._SET),
      optional($._TO),
      optional(seq(
        $._FALSE,
        optional($._IS),
        field('when_set_to_false', $._literal)))
    )),

    value_item: $ => seq(
      choice($._literal, alias($._fixed_format_integer_value, $.integer)),
      optional(seq(
        $.THRU,
        $._literal
      )),
      optional(',')
    ),

    procedure_division: $ => prec.right(3, seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    )),

    _procedure_division_contenet: $ => prec.right(3, choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    paragraph_header: $ => prec.right(seq(
      field('name', choice($.numeric_label, $.cobol400_word, $._WORD, $.integer)),
      optional('.')
    )),

    period: $ => '.',

    copy_statement: $ => prec.right(seq(
      $._COPY,
      field('book', choice($.copybook_bib_name, $.cobol400_word, $.WORD, $.string)),
      field('lib_name', optional(seq(
        optional($._in_of),
        choice($.cobol400_word, $.WORD, $.string)))
      ),
      field('supress', optional($.SUPPRESS)),
      optional($.replacing_clause)
    )),

    replacing_clause: $ => seq(
      $._REPLACING,
      repeat1($.copy_replacing_item)
    ),

    copy_replacing_item: $ => seq(
      field('leading_or_trailing', optional(choice($.LEADING, $.TRAILING))),
      field('x', $.copy_replacing_operand),
      optional($._BY),
      field('by', $.copy_replacing_operand),
    ),

    copy_replacing_operand: $ => choice(
      $.copy_pseudo_text,
      $.qualified_word,
      $._literal,
    ),

    copy_pseudo_text: $ => /==[^=\n]*(?:=[^=\n]+)*==/,

    exec_cics_statement: $ => prec.right(2, seq(
      $._EXEC,
      $._CICS,
      field('body', $.cics_body),
      $._END_EXEC
    )),

    cics_body: $ => seq(
      field('command', $.cics_command),
      repeat($._cics_body_token)
    ),

    cics_command: $ => $._cics_word,

    _cics_body_token: $ => choice(
      $.string,
      $.number,
      $._cics_word,
      $._cics_operator,
      $._cics_punctuation
    ),

    _cics_word: $ => token(prec(-1, /[a-zA-Z][a-zA-Z0-9_-]*/)),

    exec_sql_statement: $ => prec.right(2, seq(
      $._EXEC,
      $._SQL,
      field('body', choice(
        $.exec_sql_include,
        $.sql_body
      )),
      $._END_EXEC
    )),

    exec_sql_include: $ => seq(
      $._INCLUDE,
      field('name', choice($.qualified_word, $.string))
    ),

    accept_statement: $ => prec.right(2, seq(
      $._ACCEPT,
      $._accept_body,
    )),

    _accept_body: $ => prec.right(seq(
      $._identifier,
      choice(
        seq(
          optional($.at_line_column),
          optional($.with_accp_attr),
        ),
        seq(
          optional($.with_accp_attr),
          optional($.at_line_column),
        ),
        seq(
          $._FROM,
          field('from', choice(
            seq($.ESCAPE, $.KEY),
            $.LINES,
            $.COLUMNS,
            prec(2, seq($.DATE, $.YYYYMMDD)),
            $.DATE,
            prec(2, seq($.DAY, $.YYYYDDD)),
            $.DAY,
            $.DAY_OF_WEEK,
            $.TIME,
            $.COMMAND_LINE,
            $.ENVIRONMENT_VALUE,
            $.ENVIRONMENT,
            $.ARGUMENT_NUMBER,
            $.ARGUMENT_VALUE,
            $.MNEMONIC_NAME,
            $.WORD
          ))
        )
      )
    )),

    at_line_column: $ => choice(
      seq(optional($._AT), $.line_number, $.column_number),
      seq(optional($._AT), $.column_number, $.line_number),
      seq(optional($._AT), $.column_number),
      seq(optional($._AT), $.line_number),
      seq($._AT, $._simple_value)
    ),

    with_accp_attr: $ => seq(
      $._WITH, repeat1(choice(
        $.BELL,
        $.BLINK,
        $.HIGHLIGHT,
        $.LOWLIGHT,
        $.REVERSE_VIDEO,
        $.UNDERLINE,
        $.OVERLINE,
        seq(choice($.BACKGROUND_COLOR, $.FOREGROUND_COLOR), optional($._IS), $._num_or_id_or_lit),
        seq($.SCROLL, choice($.UP, $.DOWN), optional(seq(
          optional($.BY),
          $._num_or_id_or_lit,
          choice($.LINE, $.LINES)))),
        $.AUTO_SKIP,
        $.AUTO,
        $.FULL,
        $.REQUIRED,
        $.UPDATE,
        $.PROMPT,
        $.SECURE,
        $.SPACE_FILL
      ))
    ),

    continue_statement: $ => $._CONTINUE,

    at_line_column: $ => choice(
      seq(optional($._AT), $.line_number, $.column_number),
      seq(optional($._AT), $.column_number, $.line_number),
      seq(optional($._AT), $.line_number),
      seq(optional($._AT), $.column_number),
      prec(1, seq($._AT, field('at', $.number))),
      seq($._AT, field('at', $._simple_value))
    ),

    _num_or_id_or_lit: $ => choice(
      $._identifier,
      $.number,//todo convert this to integer
      $.ZERO
    ),

    exit_statement: $ => prec.left(seq(
      $._EXIT,
      optional(choice(
        $.PROGRAM,
        $.PERFORM,
        seq($.PERFORM, $.CYCLE),
        $.SECTION,
        $.PARAGRAPH
      ))
    )),

    goto_statement: $ => prec.right(seq(
      $._GO, optional($._TO),
      field('to', repeat($.label)),
      field('depending', optional(seq($._DEPENDING, optional($._ON), $._identifier)))
    )),

    label: $ => choice(
      $.numeric_label,
      $.qualified_word,
      seq($._LITERAL, optional(seq($._in_of, $._LITERAL)))
    ),

    if_header: $ => prec(1, seq(
      choice($._IF, $.legacy_fi_if_keyword),
      field('condition', choice($.legacy_not_literal_condition, $.unbalanced_boolean_condition, $.expr, $.unbalanced_parenthesized_condition)),
      optional($._THEN),
    )),

    expr: $ => prec.left(choice(
      seq($.NOT, $.expr),
      seq($.expr, choice($.AND, $.OR), $.expr),
      $._expr_bool,
      seq("(", $.expr, ")")
    )),

    _expr_calc: $ => prec(1, choice(
      $._expr_calc_binary,
      $._expr_calc_unary,
      $._expr_data,
      seq("(", $._expr_calc, ")")
    )),

    parenthesized_condition_value_list: $ => seq(
      '(',
      sepBy($._expr_calc, choice($.AND, $.OR)),
      ')'
    ),

    _expr_bool: $ => choice(
      $._expr_is,
      $.is_not_user_class,
      $._expr_compare,
      $._expr_calc,
      $.is_class,
      $.is_not_class,
    ),

    eq: $ => seq(
      optional($._IS),
      choice($._EQUAL, '='),
      optional($._TO)
    ),

    inspect_statement: $ => seq(
      $._INSPECT,
      field('send', choice(
        $._identifier,
        $._literal,
        $.function_
      )),
      repeat1(choice(
        $.inspect_tallying,
        $.inspect_replacing,
        $.inspect_converting,
      ))
    ),

    inspect_replacing: $ => seq(
      $._REPLACING,
      repeat1($.replacing_item)
    ),

    replacing_item: $ => choice(
      field('characters_by', seq(
        $._CHARACTERS, $._BY,
        $._simple_value, optional($.inspect_region)
      )),
      field('region', seq(
        optional(choice(
          $.ALL,
          $.LEADING,
          $.FIRST,
          $.TRAILING
        )),
        $.replacing_region
      )),
    ),

    replacing_region: $ => seq(
      field('x', $._simple_value),
      $._BY,
      field('by', $._simple_all_value),
      field('region', optional($.inspect_region))
    ),

    _simple_all_value: $ => choice(
      $._identifier,
      $._literal
    ),

    move_statement: $ => seq(
      $._MOVE,
      choice($._move_body, $.move_without_to_body)
    ),

    _move_body: $ => seq(
      optional($._CORRESPONDING),
      field('src', $._x),
      optional($.legacy_period_before_to),
      $._TO,
      field('dst', $._target_x_list),
      optional($.legacy_move_trailing_sequence_digit)
    ),

    _simple_value: $ => choice(
      $._identifier,
      $._basic_literal
    ),

    _literal: $ => choice(
      $._basic_literal,
      seq($.ALL, $._basic_value)
    ),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    string: $ => choice(
      /('[^'\n]*')+/,
      /("[^"\n]*")+/,
      $._multiline_string,
    ),

    x_string: $ => choice(
      /[xX]'[^'\n]*'/,
      /[xX]"[^"\n]*"/,
    ),

    _ACCEPT: $ => /[aA][cC][cC][eE][pP][tT]/,
    _ARE: $ => /[aA][rR][eE]/,
    _AT: $ => /[aA][tT]/,
    _BY: $ => /[bB][yY]/,
    _CHARACTERS: $ => /[cC][hH][aA][rR][aA][cC][tT][eE][rR][sS]/,
    _CICS: $ => token(prec(2, /[cC][iI][cC][sS]/)),
    _COPY: $ => /[cC][oO][pP][yY]/,
    _CONTINUE: $ => /[cC][oO][nN][tT][iI][nN][uU][eE]/,
    _DATA: $ => /[dD][aA][tT][aA]/,
    _DEPENDING: $ => /[dD][eE][pP][eE][nN][dD][iI][nN][gG]/,
    _DIVISION: $ => choice(
      /[dD][iI][vV][iI][sS][iI][oO][nN]/,
      /[dD][iI][vV][iI][sS][iI][oO]/
    ),
    _END_EXEC: $ => token(prec(2, /[eE][nN][dD]-[eE][xX][eE][cC]/)),
    _EQUAL: $ => /[eE][qQ][uU][aA][lL]/,
    _EXIT: $ => /[eE][xX][iI][tT]/,
    _GO: $ => /[gG][oO]/,
